--- a/app/src/main/res/layout/columnlist_item.xml
+++ b/app/src/main/res/layout/columnlist_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="70dp"
+    xmlns:custom="http://schemas.android.com/tools"
     android:padding="10dp">
 
     <com.makeramen.roundedimageview.RoundedImageView
@@ -32,7 +33,8 @@
         android:layout_width="match_parent"
         android:layout_height="15dp"
         android:layout_below="@id/mTextView_column_name"
-        android:layout_toRightOf="@id/mImageView_column_logo">
+        android:layout_toRightOf="@id/mImageView_column_logo"
+        android:id="@+id/relativeLayout">
 
         <ImageView
             android:id="@+id/imageView_comments"
@@ -102,14 +104,23 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@mipmap/download" />
-
+        <com.yikouguaishou.peanutfm.view.CircleProgressView
+            android:id="@+id/mProgressBar_download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            android:padding="10dp"
+            custom:diameter="24dp"
+            />
         <ImageView
             android:id="@+id/mImageView_column_downloaded"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:src="@mipmap/download_succeed"
             android:visibility="gone" />
     </RelativeLayout>
+
 </RelativeLayout>
