--- a/app/src/main/res/layout/activity_all_type_more_base.xml
+++ b/app/src/main/res/layout/activity_all_type_more_base.xml
@@ -3,26 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:layout_margin="10dp"
-    tools:context="com.yikouguaishou.peanutfm.AllTypeMoreBaseActivity">
+    android:layout_margin="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp">
+
         <ImageButton
             android:id="@+id/mbtn_back"
-            android:layout_width="30dp"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
             android:layout_centerVertical="true"
-            android:background="@mipmap/back"
-            android:layout_height="30dp" />
+            android:background="@mipmap/back" />
+
         <TextView
             android:id="@+id/mtv_title"
             android:layout_width="wrap_content"
-            android:text="我的少侠"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:textColor="#000000"
-            android:layout_height="match_parent" />
+            android:text="我的少侠"
+            android:textColor="#000000" />
     </RelativeLayout>
 
 </RelativeLayout>
