--- a/app/src/main/res/layout/more_typezero_item.xml
+++ b/app/src/main/res/layout/more_typezero_item.xml
@@ -14,10 +14,10 @@
         android:background="@mipmap/place_holder" />
 
     <LinearLayout
-        android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="4dp"
+        android:gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
@@ -38,27 +38,28 @@
             android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:paddingEnd="6dp"
             android:text="第三方的水果的规范大哥大哥大哥方的水果的规范大哥大"
             android:textSize="10sp" />
 
         <LinearLayout
-            android:layout_marginTop="6dp"
             android:layout_width="wrap_content"
-            android:orientation="horizontal"
-            android:layout_height="24dp">
+            android:layout_height="24dp"
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal">
+
             <ImageView
-                android:layout_width="20dp"
                 android:id="@+id/iv_msg"
-                android:background="@drawable/advice"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:layout_height="20dp" />
+                android:background="@drawable/advice" />
+
             <TextView
                 android:id="@+id/tv_msg"
-                android:text="0"
-                android:layout_gravity="center_vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="0" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
