--- a/app/src/main/res/layout/turn_one_item.xml
+++ b/app/src/main/res/layout/turn_one_item.xml
@@ -19,7 +19,9 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
+            android:background="#ffffffff"
             android:layout_height="wrap_content"
+            android:elevation="1dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true">
 
@@ -28,6 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="6dp"
+                android:textSize="12sp"
                 android:alpha="0.7"
                 android:text="进行中"
                 android:textColor="#f00" />
@@ -46,6 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginTop="6dp"
+        android:elevation="1dp"
         android:orientation="horizontal">
 
         <LinearLayout
