--- a/app/src/main/res/layout/fragment_anchor_dynamic.xml
+++ b/app/src/main/res/layout/fragment_anchor_dynamic.xml
@@ -4,10 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.yikouguaishou.peanutfm.fragment.AnchorDynamicFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.marshalchen.ultimaterecyclerview.UltimateRecyclerView
+        android:id="@+id/mUltimateRecyclerView_anchor_dynamic"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="动态" />
+        >
+    </com.marshalchen.ultimaterecyclerview.UltimateRecyclerView>
 
 </FrameLayout>
