--- a/app/src/main/res/layout/dynamic_item.xml
+++ b/app/src/main/res/layout/dynamic_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="16dp"
     >
@@ -9,33 +10,80 @@
         android:id="@+id/mCircleImageView_anchor_dynamic_photo"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:src="@mipmap/boy"
         />
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
         >
         <TextView
             android:id="@+id/mTextView_anchorDynamic_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:text="主播名"
+            />
         <TextView
             android:id="@+id/mTextView_anchorDynamic_content"
+            android:layout_below="@id/mTextView_anchorDynamic_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="4"
+            android:text="动态内容"
             />
         <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/mRoundedImageView__anchorDynamic_contentPic"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:id="@+id/mRoundedImageView_anchorDynamic_contentPic"
+            android:layout_below="@id/mTextView_anchorDynamic_content"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="5dp"
+            app:riv_corner_radius="17dp"
+            android:src="@mipmap/place_holder"
             />
         <TextView
             android:id="@+id/mTextView_anchorDynamic_createTime"
+            android:layout_below="@id/mRoundedImageView_anchorDynamic_contentPic"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="创建时间"/>
+
+        <TextView
+            android:id="@+id/mTextView_anchorDynamic_commentNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@id/mTextView_anchorDynamic_createTime"
+            android:text="评论数"/>
+        <ImageView
+            android:id="@+id/mImageView_anchorDynamic_comment"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_alignTop="@id/mTextView_anchorDynamic_createTime"
+            android:layout_toLeftOf="@id/mTextView_anchorDynamic_commentNum"
+            android:layout_marginRight="3dp"
+            android:src="@mipmap/comments"
+            />
+        <TextView
+            android:id="@+id/mTextView_anchorDynamic_praiseCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_alignTop="@id/mTextView_anchorDynamic_createTime"
+            android:layout_toLeftOf="@id/mImageView_anchorDynamic_comment"
+            android:text="点赞数"
+            />
+        <ImageView
+            android:id="@+id/mImageView_anchorDynamic_praise"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_alignTop="@id/mTextView_anchorDynamic_createTime"
+            android:layout_toLeftOf="@id/mTextView_anchorDynamic_praiseCount"
+            android:layout_marginRight="3dp"
+            android:src="@mipmap/icon_good"
+            />
 
     </RelativeLayout>
 
