--- a/app/src/main/res/layout/activity_radio_play.xml
+++ b/app/src/main/res/layout/activity_radio_play.xml
@@ -1,169 +1,221 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="310dp"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:fitsSystemWindows="true">
 
-        <ImageView
-            android:id="@+id/play_bgPicture"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/play_appBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#ff737373" />
+            android:layout_height="370dp">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/mToolbar_playt"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:layout_collapseMode="pin">
-
-            <RelativeLayout
-                android:id="@+id/mRelativeLayout_playt"
+            <android.support.design.widget.CollapsingToolbarLayout
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@android:color/transparent"
-                android:padding="5dp">
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                android:minHeight="10dp"
+                app:collapsedTitleGravity="center"
+                app:contentScrim="#4c4c4c"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed">
 
-                <ImageView
-                    android:id="@+id/mIv_play_back"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="15dp"
-                    android:src="@mipmap/column_back" />
-
-                <TextView
-                    android:id="@+id/mTV_play_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="神雕侠女063"
-                    android:textColor="#ffffff"
-                    android:textSize="14sp" />
-
-                <ImageView
-                    android:id="@+id/mIv_play_share"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="10dp"
-                    android:src="@mipmap/column_share" />
-            </RelativeLayout>
-        </android.support.v7.widget.Toolbar>
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/mToolbar_playb"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_alignParentBottom="true">
-
-            <RelativeLayout
-                android:id="@+id/mRelativeLayout_playb"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@android:color/transparent"
-                android:padding="5dp">
-
-                <LinearLayout
-                    android:id="@+id/mIv_play_list"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="366dp">
 
                     <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="15dp"
-                        android:layout_weight="1"
-                        android:clickable="true"
-                        android:src="@drawable/play_orders" />
+                        android:id="@+id/play_bgPicture"
+                        android:layout_width="match_parent"
+                        android:layout_height="360dp"
+                        android:background="#ff737373" />
 
-                    <TextView
-                        android:id="@+id/play_currentTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="16dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="00:07"
-                        android:textColor="#ffffff"
-                        android:textSize="10sp" />
-                </LinearLayout>
+                    <android.support.v7.widget.Toolbar
+                        android:id="@+id/mToolbar_playb"
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:layout_alignParentBottom="true"
+                        android:background="#60737373"
+                        app:layout_collapseMode="pin">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_centerInParent="true"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
+                        <RelativeLayout
+                            android:id="@+id/mRelativeLayout_playb"
+                            android:layout_width="match_parent"
+                            android:layout_height="?attr/actionBarSize"
+                            android:background="@android:color/transparent"
+                            android:padding="5dp">
 
-                    <ImageButton
-                        android:id="@+id/play_lastone"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginLeft="30dp"
-                        android:layout_marginRight="30dp"
-                        android:background="@drawable/play_ondemand_previous" />
+                            <LinearLayout
+                                android:id="@+id/mIv_play_list"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
 
-                    <ImageButton
-                        android:id="@+id/play_playOrpause"
-                        android:layout_width="34dp"
-                        android:layout_height="34dp"
-                        android:layout_marginLeft="30dp"
-                        android:layout_marginRight="30dp"
-                        android:background="@drawable/play_ondemand_image_play" />
+                                <ImageView
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginRight="15dp"
+                                    android:layout_weight="1"
+                                    android:clickable="true"
+                                    android:src="@drawable/play_orders" />
 
-                    <ImageButton
-                        android:id="@+id/play_nextone"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginLeft="30dp"
-                        android:layout_marginRight="30dp"
-                        android:background="@drawable/play_ondemand_next" />
+                                <TextView
+                                    android:id="@+id/play_currentTime"
+                                    android:layout_width="40dp"
+                                    android:layout_height="16dp"
+                                    android:layout_weight="1"
+                                    android:gravity="center_vertical"
+                                    android:text="00:00"
+                                    android:textColor="#ffffff"
+                                    android:textSize="10sp" />
+                            </LinearLayout>
 
-                </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_centerInParent="true"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentRight="true"
-                    android:orientation="vertical">
+                                <ImageButton
+                                    android:id="@+id/play_lastone"
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:layout_marginLeft="30dp"
+                                    android:layout_marginRight="30dp"
+                                    android:background="@drawable/play_ondemand_previous" />
 
-                    <ImageView
-                        android:id="@+id/mIv_play_heart"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="15dp"
-                        android:layout_weight="1"
-                        android:src="@mipmap/collect" />
+                                <ImageButton
+                                    android:id="@+id/play_playOrpause"
+                                    android:layout_width="40dp"
+                                    android:layout_height="40dp"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginLeft="30dp"
+                                    android:layout_marginRight="30dp"
+                                    android:background="@drawable/play_ondemand_image_play" />
 
-                    <TextView
-                        android:id="@+id/play_totleTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="16dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="23:35"
-                        android:textColor="#ffffff"
-                        android:textSize="10sp" />
-                </LinearLayout>
-            </RelativeLayout>
-        </android.support.v7.widget.Toolbar>
-    </RelativeLayout>
+                                <ImageButton
+                                    android:id="@+id/play_nextone"
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:layout_marginLeft="30dp"
+                                    android:layout_marginRight="30dp"
+                                    android:background="@drawable/play_ondemand_next" />
 
-    <SeekBar
-        android:id="@+id/play_seekBar"
-        style="@style/Base.Widget.AppCompat.SeekBar"
-        android:layout_width="match_parent"
-        android:layout_height="6dp"
-        android:layout_below="@+id/play_bgPicture"
-        android:background="@color/grey"
-        android:backgroundTint="#ff00f0ff" />
-</LinearLayout>
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_alignParentRight="true"
+                                android:orientation="vertical">
+
+                                <ImageView
+                                    android:id="@+id/mIv_play_heart"
+                                    android:layout_width="26dp"
+                                    android:layout_height="26dp"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginRight="15dp"
+                                    android:layout_weight="1"
+                                    android:src="@mipmap/collect" />
+
+                                <TextView
+                                    android:id="@+id/play_totleTime"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="16dp"
+                                    android:layout_weight="1"
+                                    android:gravity="center"
+                                    android:text="23:35"
+                                    android:textColor="#ffffff"
+                                    android:textSize="10sp" />
+                            </LinearLayout>
+                        </RelativeLayout>
+                    </android.support.v7.widget.Toolbar>
+
+                    <SeekBar
+                        android:id="@+id/play_seekBar"
+                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="6dp"
+                        android:layout_below="@id/play_bgPicture"
+                        android:background="#737373"
+                        android:backgroundTint="@color/colorYellow"
+                        android:scaleX="1.06" />
+                </RelativeLayout>
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/mToolbar_playt"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="#60737373"
+                    android:backgroundTintMode="src_over"
+                    app:layout_collapseMode="pin">
+
+                    <RelativeLayout
+                        android:id="@+id/mRelativeLayout_playt"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:background="@android:color/transparent"
+                        android:padding="5dp">
+
+                        <ImageView
+                            android:id="@+id/mIv_play_back"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="15dp"
+                            android:src="@mipmap/column_back" />
+
+                        <TextView
+                            android:id="@+id/mTV_play_title"
+                            android:layout_width="260dp"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:ellipsize="end"
+                            android:gravity="center"
+                            android:maxLines="1"
+                            android:text="神雕侠女063"
+                            android:textColor="#ffffff"
+                            android:textSize="14sp" />
+
+                        <ImageView
+                            android:id="@+id/mIv_play_share"
+                            android:layout_width="26dp"
+                            android:layout_height="26dp"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="10dp"
+                            android:src="@mipmap/column_share" />
+                    </RelativeLayout>
+                </android.support.v7.widget.Toolbar>
+
+            </android.support.design.widget.CollapsingToolbarLayout>
+
+        </android.support.design.widget.AppBarLayout>
+
+        <com.marshalchen.ultimaterecyclerview.UltimateRecyclerView
+            android:id="@+id/radioplay_comment_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    </android.support.design.widget.CoordinatorLayout>
+
+</RelativeLayout>
+
+
+    <!--<android.support.v4.widget.NestedScrollView--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
+
+    <!--<TextView--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_margin="10dp"--><!--android:text="@string/large_text" />-->
+
+    <!--</android.support.v4.widget.NestedScrollView>-->
