--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -26,7 +26,7 @@
             android:text="个人中心"/>
 
     </RelativeLayout>
-    
+
     <LinearLayout
         android:layout_marginLeft="15dp"
         android:layout_width="match_parent"
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:text="用户名"/>
     </LinearLayout>
-    
+
     <LinearLayout
         android:layout_marginLeft="15dp"
         android:layout_width="match_parent"
@@ -57,36 +57,14 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="primary message"/>
+            android:text="基础信息"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
             android:layout_marginRight="15dp"
             android:textSize="15dp"
-            android:text="edit"/>
-
-    </LinearLayout>
-    
-    <View
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#bab5b5"/>
-
-    <LinearLayout
-        android:layout_marginLeft="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:text="nickname"/>
-
+            android:text="编辑"/>
 
     </LinearLayout>
 
@@ -107,7 +85,7 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="telephone"/>
+            android:text="昵称"/>
 
 
     </LinearLayout>
@@ -129,7 +107,7 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="sex"/>
+            android:text="手机号"/>
 
 
     </LinearLayout>
@@ -151,7 +129,7 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="birthday"/>
+            android:text="性别"/>
 
 
     </LinearLayout>
@@ -173,7 +151,7 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="address"/>
+            android:text="生日"/>
 
 
     </LinearLayout>
@@ -184,13 +162,35 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#bab5b5"/>
-    
+
+    <LinearLayout
+        android:layout_marginLeft="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="地址"/>
+
+
+    </LinearLayout>
+
+    <View
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#bab5b5"/>
+
     <Button
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/buttonshape_personinfo"
-        android:text="quit safely"/>
+        android:text="安全退出"/>
 
 </LinearLayout>
