--- a/app/src/main/res/layout/fragment_mine_header.xml
+++ b/app/src/main/res/layout/fragment_mine_header.xml
@@ -1,19 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="30dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<?xml version="1.0" encoding="UTF-8"?>
+
+    <LinearLayout android:gravity="center"
     android:background="#e4eaae"
-    android:gravity="center">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="30dp" android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="100dp"
         android:layout_height="100dp"
-        app:civ_border_width="2dp"
-        app:civ_border_color="#171616"
+        android:layout_width="100dp"
         android:src="@mipmap/touxiang"
-        />
-
+        app:civ_border_color="#171616"
+        app:civ_border_width="2dp"
+        android:id="@+id/cv"/>
 
 </LinearLayout>
