--- a/app/src/main/res/layout/quanjubofang_layout.xml
+++ b/app/src/main/res/layout/quanjubofang_layout.xml
@@ -1,58 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+    android:background="#cedae6"
     android:gravity="center_vertical"
 
-    android:background="#cedae6">
+    android:orientation="horizontal">
+
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_marginLeft="15dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginLeft="15dp"
         android:src="@mipmap/ic_launcher"
-        app:civ_border_width="2dp"
         app:civ_border_color="#d6c8c8"
-        />
+        app:civ_border_width="2dp" />
 
     <LinearLayout
-        android:layout_marginLeft="10dp"
         android:layout_width="0dp"
-        android:layout_weight="1"
         android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_weight="1"
         android:gravity="center_vertical"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="bottom"
-            android:textSize="20dp"
-            android:text="FM92.5"/>
+            android:text="FM92.5"
+            android:textSize="20dp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="同步畅游"/>
+            android:text="同步畅游" />
 
     </LinearLayout>
 
     <ImageView
-        android:padding="5dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/ic_bofanglogoo"
-        />
+        android:padding="5dp"
+        android:src="@drawable/ic_bofanglogoo" />
+
     <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="15dp"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_listbofanglogo"
-        />
-
+        android:src="@drawable/ic_listbofanglogo" />
 
 
 </LinearLayout>
