--- a/app/src/main/res/layout/radio_play_item.xml
+++ b/app/src/main/res/layout/radio_play_item.xml
@@ -4,49 +4,50 @@
     android:layout_height="120dp"
     android:background="#e7e0e0"
     android:orientation="horizontal">
+
     <ImageView
         android:layout_width="180dp"
         android:layout_height="match_parent"
-        android:src="@mipmap/ic_launcher"
-        />
+        android:src="@mipmap/ic_launcher" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="2017佛山两会热线"/>
+            android:text="2017佛山两会热线" />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="30dp">
+
             <TextView
-                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="00:00"/>
+                android:gravity="center"
+                android:text="00:00" />
 
             <ImageView
-                android:paddingBottom="6dp"
-                android:layout_toLeftOf="@id/tv_itemshu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_play_circle"/>
+                android:layout_toLeftOf="@+id/tv_itemshu"
+                android:paddingBottom="6dp"
+                android:src="@drawable/ic_play_circle" />
+
             <TextView
-                android:layout_marginRight="10dp"
-                android:layout_alignParentRight="true"
                 android:id="@+id/tv_itemshu"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
                 android:gravity="center"
-                android:text="27"/>
+                android:text="27" />
         </RelativeLayout>
     </LinearLayout>
-
-
-
-
 
 
 </LinearLayout>
