--- a/app/src/main/res/layout/fragment_mine_header.xml
+++ b/app/src/main/res/layout/fragment_mine_header.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-    <LinearLayout android:gravity="center"
+<LinearLayout android:gravity="center"
     android:background="#e4eaae"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="30dp" android:layout_height="wrap_content"
+    android:paddingTop="30dp"
+    android:paddingBottom="10dp"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -14,5 +17,12 @@
         app:civ_border_color="#171616"
         app:civ_border_width="2dp"
         android:id="@+id/cv"/>
+    <TextView
+        android:id="@+id/mf_username"
+        android:layout_marginTop="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:text="用户名"/>
 
 </LinearLayout>
