--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -34,12 +34,14 @@
         android:orientation="horizontal"
         android:gravity="center_vertical">
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/pc_cv"
             android:layout_width="100dp"
             android:layout_height="100dp"
             app:civ_border_width="2dp"
             app:civ_border_color="#171616"
             android:src="@mipmap/ic_launcher"/>
         <TextView
+            android:id="@+id/pc_username"
             android:textSize="16dp"
             android:layout_marginLeft="15dp"
             android:layout_width="wrap_content"
@@ -81,6 +83,7 @@
         android:layout_height="50dp"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/pc_nickname"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
@@ -186,6 +189,8 @@
         android:background="#bab5b5"/>
 
     <Button
+        android:onClick="exitSafe"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_width="match_parent"
