写了电台播放界面的评论，并写了分享（测试）

--- a/app/src/main/res/layout/activity_play_radio.xml
+++ b/app/src/main/res/layout/activity_play_radio.xml
@@ -11,4 +11,21 @@
     <include layout="@layout/play_radio_logo" />
 
     <include layout="@layout/play_radio_anchorperson" />
+
+    <TextView
+        android:id="@+id/play_radio_comment_count_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_below="@+id/mTextView_search_title"
+        android:layout_marginTop="14dp"
+        android:gravity="center_vertical"
+        android:text="互动评论(0条)" />
+
+    <com.marshalchen.ultimaterecyclerview.UltimateRecyclerView
+        android:id="@+id/play_radio_rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        />
 </LinearLayout>
