--- a/app/src/main/res/layout/turn_two_item.xml
+++ b/app/src/main/res/layout/turn_two_item.xml
@@ -24,6 +24,15 @@
             <!--android:scaleType="centerCrop"-->
             <!--app:riv_corner_radius="6dp" />-->
 
+            <TextView
+                android:id="@+id/tv_please_wait"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:background="@color/grey"
+                android:gravity="center"
+                android:text="敬请期待"
+                android:visibility="visible" />
+
             <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
                 android:id="@+id/JC_video1"
                 android:layout_width="match_parent"
